src/main/java/com/fiap/skillriseapi/specs/error/ApiResponseInternalServerError.java
package com.fiap.skillriseapi.specs.error;

import io.swagger.v3.oas.annotations.media.Content;
import io.swagger.v3.oas.annotations.media.ExampleObject;
import io.swagger.v3.oas.annotations.responses.ApiResponse;
import org.springframework.http.MediaType;

import java.lang.annotation.ElementType;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;

@Retention(RetentionPolicy.RUNTIME)
@Target({ElementType.TYPE, ElementType.METHOD, ElementType.PARAMETER, ElementType.ANNOTATION_TYPE})
@ApiResponse(
        responseCode = "500",
        description = "Erro interno no servidor - ocorreu um erro inesperado ao processar a requisição",
        content = @Content(
                mediaType = MediaType.APPLICATION_JSON_VALUE,
                examples = @ExampleObject(
                        summary = "Unexpected internal error",
                        value = "{ \"status\": \"500\", \"message\": \"Erro interno no servidor!\" }"
                )
        )
)
public @interface ApiResponseInternalServerError {
}
